[package]
name = "aoc_2019_07"
version = "0.1.0"
authors = ["Bobby Reynolds <bobby@reynoldsbd.net>"]
edition = "2018"

[dependencies]
intcode = { path = "../intcode" }
itertools = "0.8"

[[bin]]
name = "aoc_2019_07_part1"
path = "src/part1.rs"

[[bin]]
name = "aoc_2019_07_part2"
path = "src/part2.rs"
