[package]
name = "aoc_2019_13"
version = "0.1.0"
authors = ["Bobby Reynolds <bobby@reynoldsbd.net>"]
edition = "2018"

[dependencies]
intcode = { path = "../intcode" }

[[bin]]
name = "aoc_2019_13_part1"
path = "src/part1.rs"

[[bin]]
name = "aoc_2019_13_part2"
path = "src/part2.rs"
